# collectif-objets-datasette

./: .gitattributes  .gitignore  Makefile  README.md  metadata.sqlite  metadata.yml  pyproject.toml
app/: data.sqlite  metadata.sqlite  metadata.yml  settings.json
data_scrapped/: mairies.csv  merimee.csv  merimee_to_memoire.csv  palissy.csv  palissy_to_memoire.csv  palissy_to_merimee.csv
metadata/: memoire.csv  merimee.csv  palissy.csv
scripts/: prepare_mairies_csv.py  prepare_sqlite.sh
