[tool.poetry]
name = "collectif-objets-datasette"
version = "0.1.0"
description = ""
authors = ["Adrien Di Pasquale <adrien.di_pasquale@beta.gouv.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
datasette = "^0"
csvs-to-sqlite = "^1"
datasette-publish-fly = "^1"
pandas = "^1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
